armine.css
html, body {
  font-family: 'Roboto', 'Helvetica', sans-serif;
  margin: 0;
  padding: 0;
}
.armine-avatar {
  width: 128px;
  height: 128px;
  border-radius: 64px;
  margin-right: 32px;
}
.mdl-armine .mdl-layout__header-row {
  padding-left: 40px;
  justify-content: center;
}
.mdl-armine .mdl-layout.is-small-screen .mdl-layout__header-row h3 {
  font-size: inherit;
}
.mdl-armine .mdl-layout__tab-bar-button {
  display: none;
}
.mdl-armine .mdl-layout.is-small-screen .mdl-layout__tab-bar .mdl-button {
  display: none;
}
.mdl-armine .mdl-layout:not(.is-small-screen) .mdl-layout__tab-bar,
.mdl-armine .mdl-layout:not(.is-small-screen) .mdl-layout__tab-bar-container {
  overflow: visible;
}
.mdl-armine .mdl-layout__tab-bar-container {
  height: 64px;
}
.mdl-armine .mdl-layout__tab-bar {
  padding: 0;
  padding-left: 16px;
  box-sizing: border-box;
  height: 100%;
  width: 100%;
  justify-content: center;
}
.mdl-armine .mdl-layout__tab-bar .mdl-layout__tab {
  height: 64px;
  line-height: 64px;
}
.mdl-armine .mdl-layout__tab-bar .mdl-layout__tab.is-active::after {
  background-color: white;
  height: 4px;
}
.mdl-armine main > .mdl-layout__tab-panel {
  padding: 8px;
  padding-top: 48px;
}
.mdl-armine .mdl-card {
  height: auto;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
      -ms-flex-direction: column;
          flex-direction: column;
}
.mdl-armine .mdl-card > * {
  height: auto;
}
.mdl-armine .mdl-card .mdl-card__supporting-text {
  margin: 40px;
  -webkit-flex-grow: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
  padding: 0;
  color: inherit;
  width: calc(100% - 80px);
}
.mdl-armine.mdl-armine .mdl-card__supporting-text h3 {
  margin-top: 0;
  margin-bottom: 20px;
}
.mdl-armine .mdl-card__actions {
  margin: 0;
  padding: 4px 40px;
  color: inherit;
}
.mdl-armine .mdl-card__actions a {
  color: #00BCD4;
  margin: 0;
}
.mdl-armine .mdl-card__actions a:hover,
.mdl-armine .mdl-card__actions a:active {
  color: inherit;
  background-color: transparent;
}
.mdl-armine .mdl-card__supporting-text + .mdl-card__actions {
  border-top: 1px solid rgba(0, 0, 0, 0.12);
}
.mdl-armine .mdl-layout__content section:not(:last-of-type) {
  position: relative;
  margin-bottom: 48px;
}
.mdl-armine section.section--center {
  max-width: 860px;
}
.mdl-armine section > header{
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-justify-content: center;
      -ms-flex-pack: center;
          justify-content: center;
}
.mdl-armine section > header > .material-icons {
  font-size: 3rem;
}
.mdl-armine section > button {
  position: absolute;
  z-index: 99;
  top: 8px;
  right: 8px;
}
.mdl-armine section .section__circle {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-justify-content: flex-start;
      -ms-flex-pack: start;
          justify-content: flex-start;
  -webkit-flex-grow: 0;
      -ms-flex-positive: 0;
          flex-grow: 0;
  -webkit-flex-shrink: 1;
      -ms-flex-negative: 1;
          flex-shrink: 1;
}
.mdl-armine section .section__text {
  -webkit-flex-grow: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
  -webkit-flex-shrink: 0;
      -ms-flex-negative: 0;
          flex-shrink: 0;
  padding-top: 8px;
}
.mdl-armine section .section__text h4 {
  font-size: 125%;
  margin: 0;
  margin-bottom: 0.5em;
}
.mdl-armine section .section__text a {
  text-decoration: none;
}
.mdl-armine section .section__circle-container > .section__circle-container__circle {
  width: 64px;
  height: 64px;
  border-radius: 32px;
  margin: 8px 0;
}
.mdl-armine section.section--center .section__text:not(:last-child) {
  /*border-bottom: 1px solid rgba(0,0,0,.13);*/
  margin-bottom: 32px;
}
.mdl-armine .mdl-card .mdl-card__supporting-text > h3:first-child {
  margin-bottom: 24px;
}
.mdl-armine .mdl-layout__tab-panel:not(#overview) {
  background-color: white;
}
.mdl-armine #overview section {
  margin-bottom: 72px;
}
.mdl-armine .short-cv-list-icon {
    font-size: 500%;
    padding-left: 16px;
    padding-top: 16px;
}

